dimagi-SalesforceFB/src/objects/Domain__c.object
<CustomObject>
    <description>CommCare Integration</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account (Organization)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Domain</relationshipLabel>
        <relationshipName>Domain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_of_deployment_salesforce__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the lookup for Country in Salesforce, not CommCareHQ</description>
        <label>Country of deployment (salesforce)</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Domain</relationshipLabel>
        <relationshipName>Domain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deployment_Countries__c</fullName>
        <label>Countries</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment</label>
        <referenceTo>Deployment__c</referenceTo>
        <relationshipLabel>Domain</relationshipLabel>
        <relationshipName>Domain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deployment_city__c</fullName>
        <formula>Deployment__r.city__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment_city</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_country__c</fullName>
        <formula>Deployment__r.country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment_country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_public__c</fullName>
        <formula>Deployment__r.public__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment_public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployment_region__c</fullName>
        <formula>Deployment__r.region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment_region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>creating_user__c</formula>
        <label>Contact: Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_Business_Unit__c</fullName>
        <formula>Internal_Properties__r.InternalProp_Business_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectSpace_Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_area__c</fullName>
        <formula>Internal_Properties__r.area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_can_use_data__c</fullName>
        <formula>Internal_Properties__r.can_use_data__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Can_use_data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalProp_commcare_edition__c</fullName>
        <formula>Internal_Properties__r.commcare_edition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_commcare_edition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_commtrack_domain__c</fullName>
        <formula>Internal_Properties__r.commtrack_domain__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_commtrack_domain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalProp_custom_eula__c</fullName>
        <formula>Internal_Properties__r.custom_eula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom_EULA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalProp_goal_followup_rate__c</fullName>
        <formula>Internal_Properties__r.goal_followup_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_goal_followup_rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InternalProp_goal_time_period__c</fullName>
        <formula>Internal_Properties__r.goal_time_period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_goal_time_period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InternalProp_initiative__c</fullName>
        <formula>Internal_Properties__r.initiative__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_initiative</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_organization_name__c</fullName>
        <formula>Internal_Properties__r.organization_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_organization_name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_phone_model__c</fullName>
        <formula>Internal_Properties__r.phone_model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_phone_model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_platform__c</fullName>
        <formula>Internal_Properties__r.platform__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_project_manager__c</fullName>
        <formula>Internal_Properties__r.project_manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_project_manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_project_state__c</fullName>
        <formula>Internal_Properties__r.project_state__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_project_state</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_self_started__c</fullName>
        <formula>Internal_Properties__r.self_started__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_self_started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalProp_services__c</fullName>
        <formula>Internal_Properties__r.services__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_services</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_sf_account_id__c</fullName>
        <formula>Internal_Properties__r.sf_account_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_sf_account_id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_sf_contract_id__c</fullName>
        <formula>Internal_Properties__r.sf_contract_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_sf_contract_id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_sub_area__c</fullName>
        <formula>Internal_Properties__r.sub_area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_sub_area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_using_adm__c</fullName>
        <formula>Internal_Properties__r.using_adm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_using_adm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalProp_using_call_center__c</fullName>
        <formula>Internal_Properties__r.using_call_center__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_using_call_center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalProp_workshop_region__c</fullName>
        <formula>Internal_Properties__r.workshop_region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_workshop_region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Properties__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Properties</label>
        <referenceTo>Internal_Properties__c</referenceTo>
        <relationshipLabel>Domain</relationshipLabel>
        <relationshipName>Domain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Domain</relationshipLabel>
        <relationshipName>Domain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Likely_Real__c</fullName>
        <description>over 300 forms</description>
        <formula>cpAllForms__c &gt;= 300</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Likely Real</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Domain</relationshipLabel>
        <relationshipName>Domain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Length__c</fullName>
        <description>Project length in days (first to last form submission)</description>
        <formula>cpLastFormSubmissionDate__c -  cpFirstFormSubmissionDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project length in days (first to last form submission)</inlineHelpText>
        <label>Project Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View_Project_Space_Settings_in_HQ__c</fullName>
        <formula>HYPERLINK(&quot;https://www.commcarehq.org/a/&quot;&amp; Name &amp;&quot;/settings/project/basic/&quot;, &quot;View Project Space Settings HQ&quot;, &quot;_self&quot;)</formula>
        <label>View Project Space Settings in HQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>attribution_notes__c</fullName>
        <label>Domain_attribution_notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>author__c</fullName>
        <label>Domain_author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billable_client__c</fullName>
        <label>Domain_billable_client</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billing_address_city__c</fullName>
        <label>Domain_billing_address_city</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billing_address_country__c</fullName>
        <label>Domain_billing_address_country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billing_address_doc_type__c</fullName>
        <label>Domain_billing_address_doc_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billing_address_name__c</fullName>
        <label>Domain_billing_address_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billing_address_postal_code__c</fullName>
        <label>Domain_billing_address_postal_code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billing_address_state_province__c</fullName>
        <label>Domain_billing_address_state_province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billing_number__c</fullName>
        <label>Domain_billing_number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>case_sharing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_case_sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cda_date__c</fullName>
        <label>cda_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cda_doc_type__c</fullName>
        <label>cda_doc_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cda_signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>cda_signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cda_type__c</fullName>
        <label>cda_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cda_user_id__c</fullName>
        <label>cda_user_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cda_user_ip__c</fullName>
        <label>cda_user_ip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cda_version__c</fullName>
        <label>cda_version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chat_message_count_threshold__c</fullName>
        <label>Domain_chat_message_count_threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cloudcare_releases__c</fullName>
        <label>Domain_cloudcare_releases</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>commconnect_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_commconnect_enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>commtrack_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_commtrack_enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>count_messages_as_read_by_anyone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_count_messages_as_read_by_anyone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cp300thFormSubmission__c</fullName>
        <label>Domain_cp_300th_form_submission</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cpActiveMobileUsers__c</fullName>
        <label>Domain_cp_active_mobile_users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllActiveCases__c</fullName>
        <label>Domain_cp_all_active_cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllCases__c</fullName>
        <label>Domain_cp_all_cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllForms__c</fullName>
        <label>Domain_cp_all_forms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllInactiveCases__c</fullName>
        <label>Domain_cp_all_inactive_cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllIncomingSms__c</fullName>
        <label>Domain_cp_all_incoming_sms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllMobileUsers__c</fullName>
        <label>Domain_cp_all_mobile_users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllOutgoingSms__c</fullName>
        <label>Domain_cp_all_outgoing_sms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllSmsIn30Days__c</fullName>
        <label>Domain_cp_all_sms_in_30_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllSmsIn60Days__c</fullName>
        <label>Domain_cp_all_sms_in_60_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllSmsIn90Days__c</fullName>
        <label>Domain_cp_all_sms_in_90_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllSms__c</fullName>
        <label>Domain_cp_all_sms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllWebUsers__c</fullName>
        <label>Domain_cp_all_web_users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpCasesIn30Days__c</fullName>
        <label>Domain_cp_cases_in_30_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpCasesIn60Days__c</fullName>
        <label>Domain_cp_cases_n_60_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpCasesIn90Days__c</fullName>
        <label>Domain_cp_cases_in_90_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpFirstFormSubmissionDate__c</fullName>
        <label>Domain_cp_first_form_submission_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cpFormsIn30Days__c</fullName>
        <label>Domain_cp_forms_in_30_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpFormsIn60Days__c</fullName>
        <label>Domain_cp_forms_in_60_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpFormsIn90Days__c</fullName>
        <label>Domain_cp_forms_in_90_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpHasApp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_cp_has_app</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpIncomingSmsIn30Days__c</fullName>
        <label>Domain_cp_incoming_sms_in_30_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpIncomingSmsIn60Days__c</fullName>
        <label>Domain_cp_incoming_sms_in_60_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpIncomingSmsIn90Days__c</fullName>
        <label>Domain_cp_incoming_sms_in_90_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpIsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_cp_is_active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpLastFormSubmissionDate__c</fullName>
        <label>Domain_cp_last_form_submission_date__c</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cpOutgoingSmsIn30Days__c</fullName>
        <label>Domain_cp_outgoing_sms_in_30_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpOutgoingSmsIn60Days__c</fullName>
        <label>Domain_cp_outgoing_sms_in_60_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpOutgoingSmsIn90Days__c</fullName>
        <label>Domain_cp_outgoing_sms_in_90_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>creating_user__c</fullName>
        <label>Domain_creating_user</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currency_code__c</fullName>
        <label>Domain_currency_code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>custom_case_username__c</fullName>
        <label>Domain_custom_case_username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>custom_chat_template__c</fullName>
        <label>Domain_custom_chat_template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customer_type__c</fullName>
        <label>Domain_customer_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_created__c</fullName>
        <label>Domain_date_created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>default_mobile_worker_redirect__c</fullName>
        <label>Domain_default_mobile_worker_redirect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>default_sms_backend_id__c</fullName>
        <label>Domain_default_sms_backend_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>default_sms_response__c</fullName>
        <label>Domain_default_sms_response</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>default_timezone__c</fullName>
        <label>Domain_default_timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>Domain_description</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>domain_type1__c</fullName>
        <formula>if(commtrack_enabled__c,&quot;commtrack&quot;,&quot;commcare&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>domain_type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>download_count__c</fullName>
        <label>Domain_download_count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>downloads__c</fullName>
        <label>Domain_downloads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>filter_surveys_from_chat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_filter_surveys_from_chat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>full_downloads__c</fullName>
        <label>Domain_full_downloads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>has_careplan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_has_careplan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>has_custom_logo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_has_custom_logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hipaa_compliant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_hipaa_compliant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hr_name__c</fullName>
        <label>Domain_hr_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <externalId>true</externalId>
        <label>Domain_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_is_active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_is_approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_is_public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_shared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_is_shared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_sms_billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_is_sms_billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_snapshot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_is_snapshot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_test__c</fullName>
        <label>Domain_is_test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>launch_date__c</fullName>
        <label>Domain_launch_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>license__c</fullName>
        <label>Domain_license</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>location_restriction_for_users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_location_restriction_for_users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>locations_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_locations_enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>multimedia_included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_multimedia_included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>name_of_publisher__c</fullName>
        <label>Domain_name_of_publisher</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>offset__c</fullName>
        <label>offset (internal use)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>organization__c</fullName>
        <label>Domain_organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_type__c</fullName>
        <label>Domain_project_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>publisher__c</fullName>
        <label>Domain_publisher</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>restrict_superusers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_restrict_superusers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>secure_submissions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_secure_submissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>send_to_duplicated_case_numbers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_send_to_duplicated_case_numbers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>short_description__c</fullName>
        <label>Domain_short_description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>show_invalid_survey_responses_in_chat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domshow_invalid_survey_responses_in_chat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sms_case_registration_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_sms_case_registration_enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sms_case_registration_owner_id__c</fullName>
        <label>Domain_sms_case_registration_owner_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sms_case_registration_type__c</fullName>
        <label>Domain_sms_case_registration_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sms_case_registration_user_id__c</fullName>
        <label>Domain_sms_case_registration_user_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sms_conversation_length__c</fullName>
        <label>Domain_sms_conversation_length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sms_mobile_worker_registration_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dosms_mobile_worker_registration_enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>snapshot_time__c</fullName>
        <label>Domain_snapshot_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>submitted_form__c</fullName>
        <formula>cpAllForms__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>submitted form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>supports_multiple_locations_per_user__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_SupportsMultipleLlocationsPerUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>survey_management_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_survey_management_enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tags__c</fullName>
        <label>Domain_tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>title__c</fullName>
        <label>Domain_title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>total_downloads__c</fullName>
        <label>Domain_total_downloads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>use_cloudcare_releases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_use_cloudcare_releases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>use_default_sms_response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_use_default_sms_response</label>
        <type>Checkbox</type>
    </fields>
    <label>Domain</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>date_created__c</columns>
        <columns>is_active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Domain_info_CJ</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Account__c</columns>
        <columns>Country_of_deployment_salesforce__c</columns>
        <columns>Deployment_Countries__c</columns>
        <columns>organization__c</columns>
        <columns>Deployment_country__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Likely_Real__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>is_test__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filters>
        <filters>
            <field>Deployment_country__c</field>
            <operation>equals</operation>
            <value>GUATEMALA,HONDURAS,EL SALVADOR,MEXICO,NICARAGUA,BELIZE</value>
        </filters>
        <filters>
            <field>Deployment_country__c</field>
            <operation>equals</operation>
            <value>COSTA RICA,PANAMA,COLOMBIA,PERU,ECUADOR,BRAZIL,BOLIVIA</value>
        </filters>
        <label>Domain info CJ</label>
    </listViews>
    <nameField>
        <label>Domain Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Domain</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>